fixing the issue on Sidebar when the viewport is on mobile specifically once the page is on BrowseGroups, refactoring the view Sidebar component and its implementation of styles

--- a/src/scenes/components/Sidebar/styles.css
+++ b/src/scenes/components/Sidebar/styles.css
@@ -1,14 +1,14 @@
-.Sidebar {
-  position: fixed;
-  top: 0;
-  height: 100vh;
-  opacity: 0;
-  z-index: 1;
-  background: rgba(53, 53, 53, 0.53);
-  width: 100%;
-  margin-left: -100%;
-  transition: margin-left 150ms ease-in, opacity 500ms;
-}
+/* .Sidebar { */
+/*   position: fixed; */
+/*   top: 0; */
+/*   height: 100vh; */
+/*   opacity: 0; */
+/*   z-index: 1; */
+/*   background: rgba(53, 53, 53, 0.53); */
+/*   width: 100%; */
+/*   margin-left: -100%; */
+/*   transition: margin-left 150ms ease-in, opacity 500ms; */
+/* } */
 .Sidebar.isOpen {
   opacity: 1;
   margin-left: 0px;
@@ -49,12 +49,12 @@
 }
 
 @media screen and (min-width: 768px) {
-  .Sidebar {
-    width: 257px;
-    margin-left: 0px;
-    z-index: 1;
-    opacity: 1;
-  }
+  /* .Sidebar { */
+  /*   width: 257px; */
+  /*   margin-left: 0px; */
+  /*   z-index: 1; */
+  /*   opacity: 1; */
+  /* } */
   .Sidebar .Sidebar__inner {
     width: 100%;
   }
